--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,4 +1,11 @@
+/* MAIN */
+.main {
+  width: 90%;
+  margin: 0 auto;
+}
+
 .cards {
+  margin: 10px 0;
   color: var(--grisOscuro);
 }
 
@@ -6,10 +13,56 @@
   font-size: var(--fontSizeTitle);
 }
 
-.card-text__precio {
+.card {
+  margin: 10px 0;
+  padding: 15px;
+  border: 1px solid var(--grisClaro);
+}
+
+.card-body {
+  border-top: 1px solid var(--grisClaro);
+}
+
+.card__img {
+  width: 100%;
+}
+
+.card-body__send-icon {
+  color: var(--verde);
+  width: 50px;
+  height: 50px;
+  border: 1px solid var(--verde);
+  border-radius: 50%;
+  text-align: center;
+}
+
+.card-body__send-icon i {
+  position: relative;
+  top: 25%;
+}
+
+.card-body__precio {
   font-size: var(--fontSizePrice);
 }
 
-.card-text__descuento {
+
+.card-body__descuento {
   font-size: var(--fontSizeDescuento);
+  color: var(--verde);
 }
+
+.card-body__descripcion {
+  display: none;
+}
+
+@media (min-width:361px) {
+  .card-body__descripcion {
+    display: block;
+  }
+
+  .card {
+    box-shadow: 0px 0px 10px rgb(100, 100, 100);
+  }
+}
+
+@media (min-width:769px) {}
