--- a/views/home.html
+++ b/views/home.html
@@ -66,34 +66,46 @@
             <h2 class="cards__titulo">Basado en tu última visita</h2>
             <div class="card">
                 <img class="card__img" src="/img/img-cafetera-moulinex.jpg" alt="item-1">
-                <div class="card-text">
-                    <p class="card-text__precio">$6.770</p>
-                    <p class="card-text__descuento">40% off</p>
-                    <p class="card-text__descripcion">Cafetera Moulinex</p>
+                <div class="card-body">
+                    <div class="card-body__send-icon">
+                        <i class="fa-solid fa-truck"></i>
+                    </div>
+                    <p class="card-body__precio">$6.770</p>
+                    <p class="card-body__descuento">40% off</p>
+                    <p class="card-body__descripcion">Cafetera Moulinex</p>
                 </div>
             </div>
             <div class="card">
                 <img class="card__img" src="/img/img-macbook-pro-2019.jpg" alt="item-2">
-                <div class="card-text">
-                    <p class="card-text__precio">$230.000</p>
-                    <p class="card-text__descuento">20% off</p>
-                    <p class="card-text__descripcion">MacBook Pro 2019</p>
+                <div class="card-body">
+                    <div class="card-body__send-icon">
+                        <i class="fa-solid fa-truck"></i>
+                    </div>
+                    <p class="card-body__precio">$230.000</p>
+                    <p class="card-body__descuento">20% off</p>
+                    <p class="card-body__descripcion">MacBook Pro 2019</p>
                 </div>
             </div>
             <div class="card">
                 <img class="card__img" src="/img/img-samsung-galaxy-s10.jpg" alt="item-3">
-                <div class="card-text">
-                    <p class="card-text__precio">$70.500</p>
-                    <p class="card-text__descuento">10% off</p>
-                    <p class="card-text__descripcion">Samsung Galaxy S10</p>
+                <div class="card-body">
+                    <div class="card-body__send-icon">
+                        <i class="fa-solid fa-truck"></i>
+                    </div>
+                    <p class="card-body__precio">$70.500</p>
+                    <p class="card-body__descuento">10% off</p>
+                    <p class="card-body__descripcion">Samsung Galaxy S10</p>
                 </div>
             </div>
             <div class="card">
                 <img class="card__img" src="/img/img-tv-samsung-smart.jpg" alt="">
-                <div class="card-text">
-                    <p class="card-text__precio">$23.200</p>
-                    <p class="card-text__descuento">5% off</p>
-                    <p class="card-text__descripcion">SmartTv Samsung 43"</p>
+                <div class="card-body">
+                    <div class="card-body__send-icon">
+                        <i class="fa-solid fa-truck"></i>
+                    </div>
+                    <p class="card-body__precio">$23.200</p>
+                    <p class="card-body__descuento">5% off</p>
+                    <p class="card-body__descripcion">SmartTv Samsung 43"</p>
                 </div>
             </div>
         </section>
@@ -101,34 +113,46 @@
             <h2 class="cards__titulo">Ofertas</h2>
             <div class="card">
                 <img class="card__img" src="/img/img-cafetera-moulinex.jpg" alt="item-1">
-                <div class="card-text">
-                    <p class="card-text__precio">$6.770</p>
-                    <p class="card-text__descuento">40% off</p>
-                    <p class="card-text__descripcion">Cafetera Moulinex</p>
+                <div class="card-body">
+                    <div class="card-body__send-icon">
+                        <i class="fa-solid fa-truck"></i>
+                    </div>
+                    <p class="card-body__precio">$6.770</p>
+                    <p class="card-body__descuento">40% off</p>
+                    <p class="card-body__descripcion">Cafetera Moulinex</p>
                 </div>
             </div>
             <div class="card">
                 <img class="card__img" src="/img/img-macbook-pro-2019.jpg" alt="item-2">
-                <div class="card-text">
-                    <p class="card-text__precio">$230.000</p>
-                    <p class="card-text__descuento">20% off</p>
-                    <p class="card-text__descripcion">MacBook Pro 2019</p>
+                <div class="card-body">
+                    <div class="card-body__send-icon">
+                        <i class="fa-solid fa-truck"></i>
+                    </div>
+                    <p class="card-body__precio">$230.000</p>
+                    <p class="card-body__descuento">20% off</p>
+                    <p class="card-body__descripcion">MacBook Pro 2019</p>
                 </div>
             </div>
             <div class="card">
                 <img class="card__img" src="/img/img-samsung-galaxy-s10.jpg" alt="item-3">
-                <div class="card-text">
-                    <p class="card-text__precio">$70.500</p>
-                    <p class="card-text__descuento">10% off</p>
-                    <p class="card-text__descripcion">Samsung Galaxy S10</p>
+                <div class="card-body">
+                    <div class="card-body__send-icon">
+                        <i class="fa-solid fa-truck"></i>
+                    </div>
+                    <p class="card-body__precio">$70.500</p>
+                    <p class="card-body__descuento">10% off</p>
+                    <p class="card-body__descripcion">Samsung Galaxy S10</p>
                 </div>
             </div>
             <div class="card">
                 <img class="card__img" src="/img/img-tv-samsung-smart.jpg" alt="">
-                <div class="card-text">
-                    <p class="card-text__precio">$23.200</p>
-                    <p class="card-text__descuento">5% off</p>
-                    <p class="card-text__descripcion">SmartTv Samsung 43"</p>
+                <div class="card-body">
+                    <div class="card-body__send-icon">
+                        <i class="fa-solid fa-truck"></i>
+                    </div>
+                    <p class="card-body__precio">$23.200</p>
+                    <p class="card-body__descuento">5% off</p>
+                    <p class="card-body__descripcion">SmartTv Samsung 43"</p>
                 </div>
             </div>
         </section>
