--- a/public/css/home.css
+++ b/public/css/home.css
@@ -9,6 +9,10 @@
   color: var(--grisOscuro);
 }
 
+.cards h2 {
+  margin: 20px 0;
+}
+
 .cards__titulo {
   font-size: var(--fontSizeTitle);
 }
@@ -28,23 +32,31 @@
 }
 
 .card-body__send-icon {
-  color: var(--verde);
-  width: 50px;
-  height: 50px;
-  border: 1px solid var(--verde);
-  border-radius: 50%;
-  text-align: center;
+  display: flex;
+  flex-direction: row-reverse;
+  width: 100%;
 }
 
 .card-body__send-icon i {
-  position: relative;
-  top: 25%;
+  padding: 5px;
+  font-size: 16px;
+  color: var(--verde);
+  width: 30;
+  height: 30;
+  border-radius: 50%;
+  border: 1px solid var(--verde);
+}
+
+.card-body__p-d {
+  margin-top: 10px;
+  display: flex;
+  align-items: center;
 }
 
 .card-body__precio {
   font-size: var(--fontSizePrice);
+  width: 30%;
 }
-
 
 .card-body__descuento {
   font-size: var(--fontSizeDescuento);
@@ -58,11 +70,32 @@
 @media (min-width:361px) {
   .card-body__descripcion {
     display: block;
+    margin-top: 10px;
+  }
+
+  .cards {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+
+  .cards__titulo {
+    width: 100%;
   }
 
   .card {
     box-shadow: 0px 0px 10px rgb(100, 100, 100);
+    width: 45%;
+  }
+
+  .card-body__precio {
+    width: 50%;
   }
 }
 
-@media (min-width:769px) {}
+@media (min-width:769px) {
+
+  .card {
+    width: 23%;
+  }
+}
