--- a/public/css/home.css
+++ b/public/css/home.css
@@ -34,15 +34,15 @@
 .card-body__send-icon {
   display: flex;
   flex-direction: row-reverse;
-  width: 100%;
+  margin: 10px 0;
 }
 
 .card-body__send-icon i {
-  padding: 5px;
+  padding: 6px;
   font-size: 16px;
   color: var(--verde);
-  width: 30;
-  height: 30;
+  width: 32;
+  height: 32;
   border-radius: 50%;
   border: 1px solid var(--verde);
 }
@@ -94,8 +94,10 @@
 }
 
 @media (min-width:769px) {
-
   .card {
     width: 23%;
+  }
+  .card-body__precio {
+    width: 30%;
   }
 }
