--- a/views/home.html
+++ b/views/home.html
@@ -58,6 +58,10 @@
         </div>
     </header>
     <main class="main">
+        <!-- BANNER -->
+        <div class="main__banner">
+            <img src="/img/img-home-banner.jpg" alt="item-1">
+        </div>
         <!-- Sección: Basado en tu última visita -->
         <section class="cards">
             <h2 class="cards__titulo">Basado en tu última visita</h2>
