--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,5 +2,7 @@
 /* font-family: 'Roboto', sans-serif; */
 @import "/css/general.css";
 @import "/css/header.css";
+@import "/css/register.css";
+@import "/css/login.css";
 @import "/css/home.css";
 @import "/css/footer.css";
