--- a/views/home.html
+++ b/views/home.html
@@ -42,10 +42,10 @@
                 </ul>
                 <ul class="header-nav__list-right">
                     <li class="list-right__item">
-                        <a class="header-nav__link" href="">Creá tu cuenta <i class="fa-regular fa-id-card"></i></a>
+                        <a class="header-nav__link" href="/register">Creá tu cuenta <i class="fa-regular fa-id-card"></i></a>
                     </li>
                     <li class="list-right__item">
-                        <a class="header-nav__link" href="">Ingresá <i class="fa-solid fa-right-to-bracket"></i></a>
+                        <a class="header-nav__link" href="/login">Ingresá <i class="fa-solid fa-right-to-bracket"></i></a>
                     </li>
                     <li class="list-right__item">
                         <a class="header-nav__link" href="">Mis compras <i class="fa-solid fa-basket-shopping"></i></a>
@@ -73,7 +73,7 @@
                     </div>
                     <div class="card-body__p-d">
                         <p class="card-body__precio">$6.770</p>
-                        <p class="card-body__descuento">40% off</p>
+                        <p class="card-body__descuento">40% OFF</p>
                     </div>
                     <p class="card-body__descripcion">Cafetera Moulinex</p>
                 </div>
@@ -86,7 +86,7 @@
                     </div>
                     <div class="card-body__p-d">
                         <p class="card-body__precio">$230.000</p>
-                        <p class="card-body__descuento">20% off</p>
+                        <p class="card-body__descuento">20% OFF</p>
                     </div>
                     <p class="card-body__descripcion">MacBook Pro 2019</p>
                 </div>
@@ -99,7 +99,7 @@
                     </div>
                     <div class="card-body__p-d">
                         <p class="card-body__precio">$70.500</p>
-                        <p class="card-body__descuento">10% off</p>
+                        <p class="card-body__descuento">10% OFF</p>
                     </div>
 
                     <p class="card-body__descripcion">Samsung Galaxy S10</p>
@@ -113,7 +113,7 @@
                     </div>
                     <div class="card-body__p-d">
                         <p class="card-body__precio">$23.200</p>
-                        <p class="card-body__descuento">5% off</p>
+                        <p class="card-body__descuento">5% OFF</p>
 
                     </div>
 
@@ -131,7 +131,7 @@
                     </div>
                     <div class="card-body__p-d">
                         <p class="card-body__precio">$6.770</p>
-                        <p class="card-body__descuento">40% off</p>
+                        <p class="card-body__descuento">40% OFF</p>
                     </div>
 
                     <p class="card-body__descripcion">Cafetera Moulinex</p>
@@ -145,7 +145,7 @@
                     </div>
                     <div class="card-body__p-d">
                         <p class="card-body__precio">$230.000</p>
-                        <p class="card-body__descuento">20% off</p>
+                        <p class="card-body__descuento">20% OFF</p>
                     </div>
 
                     <p class="card-body__descripcion">MacBook Pro 2019</p>
@@ -159,7 +159,7 @@
                     </div>
                     <div class="card-body__p-d">
                         <p class="card-body__precio">$70.500</p>
-                        <p class="card-body__descuento">10% off</p>
+                        <p class="card-body__descuento">10% OFF</p>
                     </div>
 
                     <p class="card-body__descripcion">Samsung Galaxy S10</p>
@@ -173,7 +173,7 @@
                     </div>
                     <div class="card-body__p-d">
                         <p class="card-body__precio">$23.200</p>
-                        <p class="card-body__descuento">5% off</p>
+                        <p class="card-body__descuento">5% OFF</p>
                     </div>
 
                     <p class="card-body__descripcion">SmartTv Samsung 43"</p>
