--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -1,8 +1,8 @@
 .footer {
     text-align: center;
     padding: 10px;
-    margin: 10px;
     color: var(--grisOscuro);
+    background-color: white;
 }
 
 .footer-section {
