--- a/public/css/header.css
+++ b/public/css/header.css
@@ -19,20 +19,23 @@
     position: relative;
     width: 50%;
     padding-left: 10px;
+    height: 100%;
 }
 
 .header-search__input {
     border: none;
-    padding: 5px;
+    padding: 10px;
     width: 100%;
+    border-radius: 5px;
 }
 
 .header-search__button {
     position: absolute;
     right: 0;
     top: 0;
-    padding: 5px;
+    padding: 10px;
     border: none;
+    border-radius: 5px;
     background-color: rgb(255, 255, 255);
 }
 
@@ -73,7 +76,7 @@
 
 /* MEDIAS QUERIES */
 
-@media (min-width:361px) {
+@media (min-width:481px) {
     .header-top-area {
         flex-wrap: nowrap;
         align-items: center;
