--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -20,6 +20,33 @@
     color: var(--celeste);
 }
 
-.footer-section__h5{
+.footer-section__h5 {
     margin-top: 2rem;
+}
+
+@media (min-width:769px) {
+    .footer {
+        background-color: white;
+
+    }
+
+    .footer-container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        width: 90%;
+        margin: 0 auto;
+    }
+
+    .footer-section {
+        width: 33%;
+        padding:0 20px;
+        margin: 10px 0 0 0;
+    }
+    .footer__copyright{
+        width: 100%;
+        display: flex;
+        justify-content: start;
+        margin: 20px 0;
+    }
 }
