--- a/public/css/header.css
+++ b/public/css/header.css
@@ -40,8 +40,10 @@
 }
 
 .header-payqoutes {
+    display: flex;
+    justify-content: end;
+    align-items: center;
     width: 100%;
-    text-align: center;
     padding-top: 1rem;
 }
 
@@ -153,11 +155,11 @@
     }
 
     .header-payqoutes {
-        font-size: 1rem;
+        font-size: .9rem;
         text-align: right;
     }
 
     .header-nav {
-        font-size: 1rem;
+        font-size: .9rem;
     }
 }
